Bugfix - Footer blocking search  (#205)
* 301 -> 200

* Bugfix to prevent footer from covering search (#204)

* Style update to ensure footer is not blocking

* Move adsense above footer again

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,12 +90,8 @@ body {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%);
+    position: relative;
     width: 100%;
-    background: rgba(22,29,38,0.4);
     padding-top: 2em !important;
     padding-bottom: 2em !important;
 }
